// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Component Accessory shows android 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
  <Themed.AvatarAccessory
    onPress={null}
    size={11.333333333333334}
  />
</View>
`;

exports[`Avatar Component Accessory shows image source 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
  <Themed.AvatarAccessory
    onPress={null}
    size={11.333333333333334}
    source={
      Object {
        "uri": "https://homepages.cae.wisc.edu/~ece533/images/baboon.png",
      }
    }
  />
</View>
`;

exports[`Avatar Component Accessory shows ios 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
  <Themed.AvatarAccessory
    onPress={null}
    size={11.333333333333334}
  />
</View>
`;

exports[`Avatar Component Placeholders renders using icon prop 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    PlaceholderContent={
      <Themed.Icon
        color="white"
        name="home"
        size={17}
        style={
          Object {
            "backgroundColor": "red",
          }
        }
        type="material-community"
      />
    }
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;

exports[`Avatar Component Placeholders renders using icon with defaults 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    PlaceholderContent={
      <Themed.Icon
        color="white"
        name="user"
        size={17}
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      />
    }
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;

exports[`Avatar Component Placeholders shouldn't show placeholder if not using source 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 50,
      "width": 50,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    PlaceholderContent={
      <Text
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontSize": 25,
            "textAlign": "center",
          }
        }
      >
        MD
      </Text>
    }
    containerStyle={
      Object {
        "backgroundColor": "pink",
        "flex": 1,
      }
    }
    placeholderStyle={
      Object {
        "backgroundColor": "transparent",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;

exports[`Avatar Component Sizes accepts a number 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 30,
      "width": 30,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;

exports[`Avatar Component Sizes accepts large 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 75,
      "width": 75,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;

exports[`Avatar Component Sizes accepts medium 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 50,
      "width": 50,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;

exports[`Avatar Component Sizes accepts small 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;

exports[`Avatar Component Sizes accepts xlarge 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 150,
      "width": 150,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;

exports[`Avatar Component Sizes defaults to small if invalid string given 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;

exports[`Avatar Component allows custom imageProps 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    resizeMode="contain"
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;

exports[`Avatar Component renders rounded 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    borderRadius={17}
    containerStyle={
      Object {
        "borderRadius": 17,
        "flex": 1,
        "overflow": "hidden",
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;

exports[`Avatar Component renders touchable if onPress given 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</ForwardRef>
`;

exports[`Avatar Component should apply values from theme 1`] = `
<View
  replaceTheme={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
  theme={
    Object {
      "Avatar": Object {
        "source": Object {
          "uri": "https://i.imgur.com/0y8Ftya.jpg",
        },
      },
      "colors": Object {
        "black": "#242424",
        "disabled": "hsl(208, 8%, 90%)",
        "divider": "#bcbbc1",
        "error": "#ff190c",
        "grey0": "#393e42",
        "grey1": "#43484d",
        "grey2": "#5e6977",
        "grey3": "#86939e",
        "grey4": "#bdc6cf",
        "grey5": "#e1e8ee",
        "greyOutline": "#bbb",
        "platform": Object {
          "android": Object {
            "error": "#f44336",
            "grey": "rgba(0, 0, 0, 0.54)",
            "primary": "#2196f3",
            "secondary": "#9C27B0",
            "success": "#4caf50",
            "warning": "#ffeb3b",
          },
          "ios": Object {
            "error": "#ff3b30",
            "grey": "#7d7d7d",
            "primary": "#007aff",
            "searchBg": "#dcdce1",
            "secondary": "#5856d6",
            "success": "#4cd964",
            "warning": "#ffcc00",
          },
        },
        "primary": "#2089dc",
        "searchBg": "#303337",
        "secondary": "#ca71eb",
        "success": "#52c41a",
        "warning": "#faad14",
        "white": "#ffffff",
      },
    }
  }
  updateTheme={[Function]}
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
        "overflow": "hidden",
        "position": "relative",
      }
    }
  >
    <Image
      onLoad={[Function]}
      replaceTheme={[Function]}
      source={
        Object {
          "uri": "https://i.imgur.com/0y8Ftya.jpg",
        }
      }
      style={
        Object {
          "bottom": 0,
          "flex": 1,
          "height": null,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": null,
        }
      }
      testID="RNE__Image"
      theme={
        Object {
          "Avatar": Object {
            "source": Object {
              "uri": "https://i.imgur.com/0y8Ftya.jpg",
            },
          },
          "colors": Object {
            "black": "#242424",
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "grey": "rgba(0, 0, 0, 0.54)",
                "primary": "#2196f3",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "ios": Object {
                "error": "#ff3b30",
                "grey": "#7d7d7d",
                "primary": "#007aff",
                "searchBg": "#dcdce1",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#ca71eb",
            "success": "#52c41a",
            "warning": "#faad14",
            "white": "#ffffff",
          },
        }
      }
      transition={true}
      updateTheme={[Function]}
    />
    <View
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#bdbdbd",
            "flex": 1,
            "height": null,
            "justifyContent": "center",
            "width": null,
          }
        }
        testID="RNE__Image__placeholder"
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "height": null,
          "width": null,
        }
      }
    />
  </View>
</View>
`;

exports[`Avatar Component should render without issues 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    ImageComponent={[Function]}
    containerStyle={
      Object {
        "flex": 1,
      }
    }
    placeholderStyle={Object {}}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</View>
`;
